# salt-analytics-framework

./: .bandit  .coveragerc  .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylint-spelling-words  .pylintrc  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  NOTICE  README.md  README.rst  noxfile.py  pyproject.toml  pytest-examples.ini  pytest.ini  setup.cfg  setup.py
.github/workflows/: ci.yml  release.yml  test.yml
.pre-commit-hooks/: check-changelog-entries.py  check-cli-examples.py  make-autodocs.py
changelog/: 22.feature.rst  29.trivial.rst  30.improvement.rst  30.trivial.rst  31.improvement.rst  32.bugfix.rst  33.improvement.rst  34.improvement.rst  37.improvement.rst  40.improvement.rst  41.improvement.rst  42.bugfix.rst  43.bugfix.rst  44.bugfix.rst  46.improvement.rst  47.improvement.rst  47.trivial.rst  48.improvement.rst  49.improvement.rst  50.improvement.rst  52.improvement.rst  54.feature.rst  57.trivial.rst  58.trivial.rst  62.improvement.rst  63.improvement.rst  64.trivial.rst  65.bugfix.rst  67.trivial.rst  68.improvement.rst  68.trivial.rst  69.improvement.rst  70.improvement.rst  73.bugfix.rst  73.improvement.rst  73.trivial.rst  _template.rst
demo/: Dockerfile  README.md  analytics-beacons.conf  analytics-combined.conf  analytics-logs.conf  master-base.conf  minion-base.conf  tmux-salt.yml
demo/data-remove-extension/: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml  setup.cfg  setup.py
demo/data-remove-extension/.github/workflows/: test.yml
demo/data-remove-extension/.pre-commit-hooks/: check-cli-examples.py  make-autodocs.py
demo/data-remove-extension/docs/: all.rst  conf.py  index.rst
demo/data-remove-extension/src/saltext/data_remove/: __init__.py  processor.py
demo/data-remove-extension/tests/: conftest.py
demo/data-remove-extension/tests/integration/: conftest.py
demo/radio/: RADIO.md  logs-processed.conf  logs.conf
docker/elastic/: .env  centosstream8.Dockerfile  centosstream9.Dockerfile  debian10.Dockerfile  debian11.Dockerfile  docker-compose.yml  loop-jobs.sh
docker/elastic/conf/: analytics.master.conf  beacons.conf  demo-schedule.conf  logging.conf  master-1.conf  master-2.conf  minion-1.conf  minion-2.conf  minion-3.conf  minion-4.conf  salt-analytics.conf  supervisord.conf  supervisord.loop-jobs.conf  supervisord.master.conf  supervisord.minion.conf
docker/elastic/state-tree/: add-user.sls  install-nginx.sls  remove-user.sls  uninstall-nginx.sls
docs/: all.rst  conf.py  contents.rst  index.rst
docs/ref/: modules.rst  saf.collect.rst  saf.forward.rst  saf.process.rst  saf.rst  saf.saltext.engines.rst  saf.saltext.rst  saf.utils.rst
examples/: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
examples/pipelines/mnist-network/: README.md  mnist.ipynb  mnist.py
examples/pipelines/mnist-notebook/: README.md
examples/requirements/: all.txt  mnist-notebook.txt
examples/src/saltext/examples/: __init__.py
examples/src/saltext/safexamples/: __init__.py
examples/src/saltext/safexamples/collect/: mnist_digits.py
examples/src/saltext/safexamples/process/: beacons_to_es.py  jobs_to_es.py  mnist_network.py  notebook_output.py  numpy_save_keys.py  state_jobs_to_es.py
examples/tests/: conftest.py  test_plugins_available.py
examples/tests/pipelines/: conftest.py  test_mnist_network.py  test_mnist_notebook.py
examples/tests/pipelines/files/: mnist_saf.ipynb
examples/tests/pipelines/files/mnist/: fingerprint.pb  saved_model.pb
examples/tests/pipelines/files/mnist/variables/: variables.data-00000-of-00001
requirements/: base.txt  dev.txt  docs.txt  tests.txt  tools.txt
src/saf/: __init__.py  manager.py  models.py  pipeline.py  plugins.py
src/saf/collect/: beacons.py  event_bus.py  file.py  grains.py  logs.py  noop.py  salt_cmd.py  salt_exec.py  test.py
src/saf/forward/: disk.py  elasticsearch.py  noop.py  test.py
src/saf/process/: job_aggregate.py  jupyter_notebook.py  noop.py  regex_mask.py  regex_mask.pyi  shannon_mask.py  state_aggregate.py  test.py
src/saf/salt/engines/: saf_mod.py
src/saf/saltext/engines/: analytics.py
src/saf/utils/: dt.py  eventbus.py  salt.py
tests/: __init__.py  conftest.py
tests/e2e/: conftest.py
tests/e2e/collectors/beacons/: test_memusage.py  test_multiple.py
tests/e2e/collectors/salt_exec/: test_arg.py  test_collatz.py  test_config_get.py
tests/e2e/engines/: test_engine.py
tests/e2e/examples/: conftest.py  test_mnist_network.py  test_mnist_notebook.py
tests/e2e/examples/files/mnist/: keras_metadata.pb
tests/e2e/examples/files/mnist/variables/: variables.index
tests/e2e/utils/: test_salt_client.py
tests/functional/: conftest.py
tests/functional/collectors/: test_test.py
tests/functional/examples/: test_example_plugins.py
tests/functional/forwarders/: test_concurrency.py
tests/functional/manager/: conftest.py  test_disabled_pipeline.py  test_enabled_pipeline.py
tests/functional/processors/: test_test.py
tests/integration/: conftest.py
tests/integration/collectors/: test_multiple.py
tests/integration/collectors/beacons/: test_memusage.py  test_multiple.py  test_status.py
tests/integration/collectors/logs/: conftest.py  test_logs.py  test_logs_with_parse.py
tests/integration/collectors/salt_exec/: conftest.py  test_arg.py  test_collatz.py  test_config_get.py
tests/integration/engines/: test_engine.py
tests/integration/forwarders/: test_concurrency.py
tests/integration/manager/: conftest.py  test_disabled_pipeline.py  test_enabled_pipeline.py
tests/integration/processors/: test_chained.py
tests/unit/forwarders/: test_test.py
tests/unit/models/: test_pipeline_run_context.py
tests/unit/process/: test_regex_mask.py  test_shannon_mask.py
tests/unit/salt/engines/: test_saf.py
tests/unit/utils/: test_salt_client.py
tools/: .ruff.toml  __init__.py  ci.py  examples.py  pre_commit.py  pre_commit.py~
