[metadata]
name = salt-analytics.examples
description = Example plugins for quick experimentation with Salt Analytics
long_description = file: README.md
long_description_content_type = text/markdown
author = Caleb Beard
author_email = calebb@vmware.com
keywords = salt-extension salt-analytics-framework
url = https://saltproject.io
project_urls =
    Source=https://github.com/saltstack/salt-analytics-framework
    Tracker=https://github.com/saltstack/salt-analytics-framework/issues
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
platforms = any

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find_namespace:
python_requires = >= 3.5
setup_requires =
  wheel
  setuptools>=50.3.2
  setuptools-declarative-requirements


[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
saf.collect =
  mnist-digits = saltext.safexamples.mnist_digits
saf.process =
  mnist-digits = saltext.safexamples.mnist_digits

[options.extras_require]
  mnist = requirements/mnist.txt

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[sdist]
owner = root
group = root
