[metadata]
name = saltext.data-remove
description = A pretty dope extension
long_description = file: README.md
long_description_content_type = text/markdown
author = Leb
author_email = calebb@vmware.com
keywords = salt-extension
url = Https://www.google.com
project_urls =
    Source=Https://www.google.com
    Tracker=Https://www.google.com/issues
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
platforms = any

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find_namespace:
python_requires = >= 3.5
setup_requires =
  wheel
  setuptools>=50.3.2
  setuptools-declarative-requirements
install_requires =
  salt>=3003
  # Add other module install requirements above this line

[options.packages.find]
where = src
exclude =
    tests

# When targetting Salt < 3003, you can remove the other 'options.entry_points' section and use this one
#[options.entry_points]
#salt.loader=
#

[options.entry_points]
saf.process=
  data_remove = saltext.data_remove.processor


[options.extras_require]
tests =
  pytest==6.2.4
  pytest-salt-factories==0.911.0
dev =
  nox
  pre-commit==2.13.0
  pylint
  SaltPyLint
docs =
  sphinx
  furo
  sphinx-copybutton
  sphinx-prompt
  sphinxcontrib-spelling
  importlib_metadata; python_version < "3.8"
docsauto =
  sphinx-autobuild

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[sdist]
owner = root
group = root
